# hashgen-testing

./: README.md
benchmarks/: README.md
benchmarks/archive/: benchmark_hashgen_old.txt  benchmark_v2022-12-20.1430-goroutine.txt
hashgen_c/: README.md
hashgen_go/: CHANGELOG.md  README.md  benchmark_go.txt  go.mod  go.sum  hashgen.go
hashgen_php/: README.md
hashgen_python/: README.md
hashgen_rust/: Cargo.toml  README.md  benchmark_rust.txt
hashgen_rust/src/: cli.rs  consts.rs  io.rs  main.rs
hashgen_rust/src/algo/: argon.rs  blake2.rs  hash_mode.rs  hex.rs  keccak.rs  md5crypt.rs  mod.rs  morse.rs  ntlm.rs  phpass.rs  sha256crypt.rs  sha512crypt.rs  wpbcrypt.rs  yescrypt.rs
