[package]
name = "hashgen"
version = "1.2.0-rust"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
bcrypt = "0.15"
blake2b_simd = "1.0"
blake2s_simd = "1.0"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
crc64fast = "1.1"
crossbeam-channel = "0.5"
data-encoding = "2.9"
hmac = "0.12"
hex = "0.4"
md-5 = "0.10"
md4 = "0.10"
rand = "0.8"
rayon = "1.11"
ripemd = "0.1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
yescrypt = { version = "0.1.0-pre.3" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
